Suite-8 Styling fixes -Back to top alignment -History timeline color changes -Navbar menu spacing -Clear and search button color change -Top widget bar color change

--- a/core/app/themes/suite8/css/abstracts/_variables.scss
+++ b/core/app/themes/suite8/css/abstracts/_variables.scss
@@ -52,6 +52,18 @@ $light-purple: #8d74cc;
 
 $wild-willow-green: #c6ca6b;
 
+$very-light-salmon-pink:#f2d4ce;
+$dark-yellow: #f59e5b;
+$light-yellow: #fdf8f1;
+$dark-purple: #be79be;
+$light-purple: #f8f4f8;
+$mild-blue: #8ab2ba;
+$light-blue: #f2f6f7;
+
+/* ----Buttons -- */
+
+$btn-danger: #ee8776;
+
 /* --------- PREDEFINED STYLES ---------- */
 
 $main: $midnight-blue;
