--- a/core/app/themes/suite8/css/components/_dropdown.scss
+++ b/core/app/themes/suite8/css/components/_dropdown.scss
@@ -183,6 +183,7 @@ ul.main li a,
 .main ul li a,
 .non-grouped .action-link {
   font-size: 0.8em;
+  padding: 0.7rem;
 }
 
 .top-nav .dropdown-menu,
