--- a/core/app/themes/suite8/css/components/_svg.scss
+++ b/core/app/themes/suite8/css/components/_svg.scss
@@ -418,7 +418,6 @@
 }
 
 .back-top-icon {
-  vertical-align: middle;
   margin: 0;
   padding: 0;
 }
