--- a/core/app/themes/suite8/css/components/_widget-bar.scss
+++ b/core/app/themes/suite8/css/components/_widget-bar.scss
@@ -1,5 +1,5 @@
 .widget-bar {
-  background-color: $salmon-pink;
+  background-color: $very-light-salmon-pink;
   color: $dark-midnight-grey;
   font-weight: bolder;
 }
